webpack - css, image

--- a/2.use-webpack-for-bundling-web-assets/src/public/index.html
+++ b/2.use-webpack-for-bundling-web-assets/src/public/index.html
@@ -5,5 +5,8 @@
   </head>
   <body>
     <h1>web app</h1>
+    <div id="app">
+      <p>Welcome to web development</p>
+    </div>
   </body>
 </html>
